--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
   "stackblitz": {
     "startCommand": "npm start"
   }
