--- a/package.json
+++ b/package.json
@@ -2,8 +2,5 @@
   "name": "js",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {},
-  "stackblitz": {
-    "startCommand": "npm start"
-  }
+  "dependencies": {}
 }
